--- a/IOT_Lambda/IOT_Lambda.csproj
+++ b/IOT_Lambda/IOT_Lambda.csproj
@@ -9,10 +9,21 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="1.0.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.3.0" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.12" />
+    <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Amazon.Lambda.Tools" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="amazonCreds.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="payment.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
